Use "hej" instead of "info" for email contact

--- a/artiklar/forord/index.html
+++ b/artiklar/forord/index.html
@@ -109,7 +109,7 @@ aside {
 
 <header class="header">
   <div>
-    <a href="/" rel="home"><img src="/assets/images/rm-logo@2x.png" alt="Rollspelsmuseet" height="40" width="40"></a> <a>Förord</a> — <a href="https://twitter.com/rollspelsmuseet">Twitter</a> — <a href="mailto:info@rollspelsmuseet.se">Kontakt</a>
+    <a href="/" rel="home"><img src="/assets/images/rm-logo@2x.png" alt="Rollspelsmuseet" height="40" width="40"></a> <a>Förord</a> — <a href="https://twitter.com/rollspelsmuseet">Twitter</a> — <a href="mailto:hej@rollspelsmuseet.se">Kontakt</a>
   </div>
 </header>
 
