--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ input[type="submit"]:active {
 <p class="links">
   <a href="/artiklar/forord/">Om Rollspelsmuseet</a> —
   <a href="https://twitter.com/rollspelsmuseet">Följ oss på Twitter</a> —
-  <a href="mailto:info@rollspelsmuseet.se">Kontakt</a>
+  <a href="mailto:hej@rollspelsmuseet.se">Kontakt</a>
 </p>
 
 <script>
